Delet Procedure from headings

--- a/docs/source/05.-Mass-balance-model.md
+++ b/docs/source/05.-Mass-balance-model.md
@@ -1,17 +1,17 @@
-## A Procedure - Accumulation
+## Accumulation
 
-## B Procedure - Melt
+## Melt
 
-## C Procedure - Debris
+## Debris
 
-## D Procedure - Refreezing
+## Refreezing
 
-## E Procedure - Firnicetemperature
+## Firnicetemperature
 
-## F Procedure - Adapting snow reservoir
+## Adapting snow reservoir
 
-## G Procedure - Catchment discharge
+## Catchment discharge
 
-## H Procedure - Adapting surface types
+## Adapting surface types
 
-## J Procedure - Storing day variables
+## Storing day variables
