--- a/docs/source/02.-Input-data.md
+++ b/docs/source/02.-Input-data.md
@@ -1,6 +1,6 @@
 GloGEM relies on various input datasets essential for glacier modelling, including ice thickness, geodetic mass balance, and climate data. Below, we provide a list of the data(sets) required by the model, along with their storage locations as of January 22, 2025. To date, these are only accessible for ETH VAW members, but they will be stored on public servers in the (near) future. 
 
-# Geometric data
+## Geometric data
 
 ** Explanations can be given by L.V.T.
 Grids are located -> 
