--- a/docs/source/00.-Introduction.md
+++ b/docs/source/00.-Introduction.md
@@ -1,16 +1,3 @@
-Welcome to the GloGEM wiki!
-
-# General intro
-The Global Glacier Evolution Model is an IDL package which allows to model the evolution of all 200.000 glaciers on Earth outside the ice sheets. The model is forced by monthly temperature and precipitation from 14 GCMs and three emission scenarios. In contrast to previous global-scale glacier models, GloGEM includes mass loss due to frontal ablation of marine-terminating glaciers. To get started, please check out this [schematic overview](https://github.com/sdrocer/GloGEM/blob/main/GloGEM_schematic.png) of the model. Today, GloGEM is maintained by the ETH VAW Glaciology group.
-
-![Alt text](https://raw.githubusercontent.com/sdrocer/GloGEM/refs/heads/main/figs/4991fd19-3417-48e9-8ec5-a3594e146bc0_v2.webp?token=GHSAT0AAAAAAC5YUMCNLIVDY2SS4IFA5RI6Z4SPPJA)
-
-
-# Cite GloGEM
-If you want to refer to GloGEM in your publications or presentations, please refer to:
-
-**_Huss, M. and Hock, R.: A new model for global glacier change and sea-level rise. Frontiers in Earth Science, 3, 5, https://www.doi.org/10.3389/feart.2015.00054, 2015_**
-
-# Glacier model type
-_GloGEM is a “glacier centric model”, which means that it runs for each glacier independently of the others. In the case of glacier complexes, it relies on the glacier inventory to properly separate the individual glacier entities by the ice divides, ensuring that all ice in a glacier basin flows towards a single glacier terminus._
-
+## Schematic overview
+Below is a schematic overview of the model, including all inputs, outputs, and modules._
+<p align="center"><img src="GloGEM_schematic.png" width="66.6%"></p>
