Make minor corrections and style adjustments

--- a/docs/source/02.-Input-data.md
+++ b/docs/source/02.-Input-data.md
@@ -2,20 +2,19 @@ GloGEM relies on various input datasets essential for glacier modelling, includi
 
 ## Geometric data
 
-** Explanations can be given by L.V.T.
-Grids are located -> 
+Explanations can be given by L.V.T. Grids are located -> 
 
-RGIv6.0
+# RGIv6.0
 
-vierzack03_second/mhuss/DEMs_global
+**'_vierzack03_second/mhuss/DEMs_global_'**
 
-RGIv7.0
+# RGIv7.0
 
-/scratch_net/iceberg_second/mhuss/RGIv7.0/dem
+**_'/scratch_net/iceberg_second/mhuss/RGIv7.0/dem'_**
 
-/scratch_net/iceberg_second/mhuss/RGIv7.0/glmask
+**_'/scratch_net/iceberg_second/mhuss/RGIv7.0/glmask'_**
 
-/scratch_net/iceberg_second/mhuss/RGIv7.0/bands (files/results/grids)
+**_'/scratch_net/iceberg_second/mhuss/RGIv7.0/bands (files/results/grids)'_**
 
 
 ## Ice thickness
