--- a/docs/source/00.-Introduction.md
+++ b/docs/source/00.-Introduction.md
@@ -1,3 +1,3 @@
 ## Schematic overview
-Below is a schematic overview of the model, including all inputs, outputs, and modules._
-<p align="center"><img src="GloGEM_schematic.png" width="66.6%"></p>
+Below is a schematic overview of the model, including all inputs, outputs, and modules.
+<p align="center"><img src="./GloGEM_schematic.png" width="66.6%"></p>
