--- a/docs/source/00.-Introduction.md
+++ b/docs/source/00.-Introduction.md
@@ -1,3 +1,3 @@
 ## Schematic overview
 Below is a schematic overview of the model, including all inputs, outputs, and modules.
-<p align="center"><img src="../images/GloGEM_schematic.png" width="66.6%"></p>
+<p align="center"><img src="https://github.com/sdrocer/GloGEM-documentation/blob/main/GloGEM_logo.png" width="66.6%"></p>
