Adjust paths and sizes of images

--- a/docs/source/00.-Introduction.md
+++ b/docs/source/00.-Introduction.md
@@ -1,3 +1,5 @@
 ## Schematic overview
 Below is a schematic overview of the model, including all inputs, outputs, and modules.
-<p align="center"><img src="https://github.com/sdrocer/GloGEM-documentation/blob/main/GloGEM_logo.png" width="66.6%"></p>
+
+![Schematic Overview](/images/GloGEM_logo.png)
+
