--- a/docs/source/00.-Introduction.md
+++ b/docs/source/00.-Introduction.md
@@ -1,4 +1,4 @@
 ## Schematic overview
 Below is a schematic overview of the model, including all inputs, outputs, and modules.
 
-![Schematic Overview](/images/GloGEM_logo.png)
+![Schematic Overview](/images/GloGEM_schematic.pnc)
