Adjust toggle headings

--- a/docs/source/02.-Input-data.md
+++ b/docs/source/02.-Input-data.md
@@ -1,14 +1,14 @@
 GloGEM relies on various input datasets essential for glacier modelling, including ice thickness, geodetic mass balance, and climate data. Below, we provide a list of the data(sets) required by the model, along with their storage locations as of January 22, 2025. To date, these are only accessible for ETH VAW members, but they will be stored on public servers in the (near) future. 
 
-## Geometric data
+# Geometric data
 
 Explanations can be given by L.V.T. Grids are located -> 
 
-# RGIv6.0
+## RGIv6.0
 
 **'_vierzack03_second/mhuss/DEMs_global_'**
 
-# RGIv7.0
+## RGIv7.0
 
 **_'/scratch_net/iceberg_second/mhuss/RGIv7.0/dem'_**
 
@@ -17,7 +17,7 @@ Explanations can be given by L.V.T. Grids are located ->
 **_'/scratch_net/iceberg_second/mhuss/RGIv7.0/bands (files/results/grids)'_**
 
 
-## Ice thickness
+# Ice thickness
 Each glacier requires an elevation-band file (~ flowline) which provides the initial ice thickness and area of each elevation band. The standard procedure in GloGEM to date is to use the "consensus estimate" of Farinotti et al. (2019) as starting point. This data is stored in:
 
 **_'/scratch_net/iceberg_second/mhuss/global_thickness/rgi60/bands_consensus2019/'_**
@@ -26,17 +26,17 @@ However, for some glaciers, the consensus data provides unrealistic results. The
 
 _**'/scratch_net/iceberg_second/mhuss/global_thickness/rgi60/bands_HF2012/'**_
 
-## Debris cover
+# Debris cover
 
 **_'/scratch_net/iceberg_second/mhuss/global_thickness/rgi60/debris/'_**
 
-## Hypsometry
+# Hypsometry
 
 The hypsometry file is stored in the same file as the ice thickness of the consensus estimate. 
 
 **_'/scratch_net/iceberg_second/mhuss/global_thickness/rgi60/bands_consensus2019/'_**
 
-## Climate data
+# Climate data
 
 GloGEM requires climate data for the past (the historical period) and the future. In the standard setup, the models uses reanalysis data for the past climate and global climate model (GCM) output for the future. In general, the climate data is stored in:
 
@@ -44,18 +44,18 @@ _**/scratch_net/vierzack04_fourth/mhuss/klima/**_
 
 In this folder, different data products are stored:
 
-## Reanalysis
-### ERA5
-### ERA5Land
-### GSWP3-W5e5
-### Chelsa-W5e5
+# Reanalysis
+## ERA5
+## ERA5Land
+## GSWP3-W5e5
+## Chelsa-W5e5
 
-## Future - GCM
-### CMIP6
+# Future - GCM
+## CMIP6
 This folder contains CMIP6 **monthly data** of 17 GCMs. There are stored in .nc (raw data) and .mdi (modified format for the monthly version of GloGEM). 
-### CMIP6_Daily
+## CMIP6_Daily
 This folder contains CMIP6 **daily data** of 26 GCMs. There are stored in .dat files containing the temperature and precipitation for each grid cell of a specific region (e.g., Alaska) along with a timestamp starting from 1 January 1850 and running until 2100. 
-### GMIP3
+## GMIP3
 This folder contains CMIP6 **monthly data** of 5 GCMs that were used for the GMIP3 simulations. The data is directly provided in .mdi files. 
-### long_CMIP6
+## long_CMIP6
 This folder contains CMIP6 **monthly data** of 11 GCMs. There are stored in .mdi (modified format for the monthly version of GloGEM).
