--- a/docs/source/03.-Contribution-guidelines.md
+++ b/docs/source/03.-Contribution-guidelines.md
@@ -1,3 +1,5 @@
+# Contribution guidelines
+
 At the moment the contribution to GloGEM is restricted to **VAW-GL** members, we are working on making it available for everyone.
 If you are a **VAW-GL** member, you can contribute following these guidelines.
 
