--- a/docs/source/04.-Git-workflow.md
+++ b/docs/source/04.-Git-workflow.md
@@ -1,3 +1,5 @@
+# Git workflow
+
 ### Get a local copy of the repository
 
 This step creates a local copy of the repository in the folder where you are. 
