--- a/docs/source/14.-Writing-of-the-output.md
+++ b/docs/source/14.-Writing-of-the-output.md
@@ -1,3 +1,5 @@
+# Writing of the output
+
 ## Write hypsometry-evolution 
 
 _Not yet a procedure. Find the lines of code [here](https://docs.google.com/document/d/11gXNjeMalXpsZxf1M3aUowcWwOAnUfIh9J5BeRxEh3s/edit?tab=t.0)_
