Adjust entire markdown file structure

--- a/docs/source/00.-Introduction.md
+++ b/docs/source/00.-Introduction.md
@@ -1,6 +1,4 @@
-# Introduction
-
-## Schematic overview
+# Schematic overview
 Below is a schematic overview of the model, including all inputs, outputs, and modules.
 
 ![Schematic Overview](/images/GloGEM_schematic.png)
