Erase one # from sub headers when needed

--- a/docs/source/05.-Reading-of-input-data.md
+++ b/docs/source/05.-Reading-of-input-data.md
@@ -1,4 +1,4 @@
-## Read geothermal/read firnicebatch
+# Read geothermal/read firnicebatch
 
 **Description** \
 If one wants to model ice or firn temperatures in GloGEM, these procedures read in the corresponding data. If in settings "firnice temperature" equals "y(es)", the geothermal flux is read in. The geothermal heat flux is a global dataset at 0.5° resolution (geothermal flux.grid), derived from (xxxxx). The procedure reads in the gridded data and assigns coordinates. In addition, there is the option to read in a list of glaciers for which ice temperature profiles are available (xx) through the read firnicebatch, if the settings "firnice batch" equals "y" is true. The read in of the ice temperature profiles occurs xxxxx
@@ -24,7 +24,7 @@ See description at input
 This procedure is called outside any of the loops
 
 ***
-## Read regionbatch
+# Read regionbatch
 **Description**\
 This file is read in to translate the RGI regions to the GloGEM regions (some regions are subdivided due to their size). The input file defines the GloGEM regions to be run and this file is used to translate it to the corresponding RGI regions, needed for reading in data. 
 
@@ -40,7 +40,7 @@ This file is read in to translate the RGI regions to the GloGEM regions (some re
 Before loop "regions" - information needed for starting this loop
 
 ***
-## Read regionalparams
+# Read regionalparams
 **Description**\
 Reading in of pre-defined regional parameters used for regional differentiating of mass balance processes. The file contains values for: 
 * Region
@@ -79,7 +79,7 @@ Reading in of pre-defined regional parameters used for regional differentiating 
 Start (within) of loop regions
 
 ***
-## Read geodetic
+# Read geodetic
 **Description**\
 Here the geodetic mass balance data is read in, for which you define the source in the "input/settings". Currently, three options are available from [Hugonnet et al., 2021 (Nature)](https://www.nature.com/articles/s41586-021-03436-z): 1) 2000-2020, 2) 2000-2010, 3) 2010-2020. The data have been formatted in a table which contains: RGI-ID, Area, lat, lon, B (mass balance m. w. eq. using Rho = 850 kgm-2), errB, number indicating measured (1) or regional mean (2) taken. Next to the initial filtering (1/2), the code does a second filtering, detecting the glaciers that have a standard deviation from the regional mean larger than 2 standard deviation, unless the area is larger than 20 km2.
 
@@ -101,7 +101,7 @@ Here the geodetic mass balance data is read in, for which you define the source 
 Before loop "Calibration phase" - preparing the calibration loop
 
 ***
-## Read climatepast
+# Read climatepast
 **Description**\
 Reads and processes historical climate data for a specified region and global reanalysis datasets or other gridded meteorological datasets (links). The reanalysis dataset is chosen in the "settings/input" and need to be in a specific format: year/month/DOY/decimal.time/temp(degC)/prec(mm/d)/temperature lapse rate. The header contains the lon,lat for the gridcell and the grid cell mean elevation. There is a file with P and T timeseries for each gridcell of the input meteorological gridded input data.\
 
@@ -132,7 +132,7 @@ Reanalysis products available: (1) ERA-5-Land (2) ERA -5-Reanalysis (3) Chelsea 
 In the grid loop
 
 ***
-## Read gcmdata
+# Read gcmdata
 **Description**\
 Reads in the GCM data (future climate projections) according to the "GCM loop" by searching for the timeseries file that has coordinates closest to the current "past climate" file (rmid). The latitudes and longitudes from all GCM files are read from files "latitudes.dat", "longitudes.dat" giving the center coordinates and translated to the midpoint coordinate to determine which file to open for the precipitation and temperature timeseries. 
 
@@ -161,7 +161,7 @@ Reads in the GCM data (future climate projections) according to the "GCM loop" b
 Just before glacier loop, in end of "grid" loop
 
 ***
-## Read hypsometry
+# Read hypsometry
 **Description**\
 The path to the glacier specific hypsometry file is defined just before the call of the read procedure. The procedure reads the hypsometry file, consisting of 10 m elevation bands for each glacier, for which the area is given, the thickness, the width, the length, the slope, the aspect, apparent mass balance (?), the basal stress and the shape factor. The procedure checks the consensus thickness data with the area from the "thick file" (source? probably consensus?), it checks: if the minimum elevation is not lower than -300m, and second if the area difference between consensus and HF2012 is not more than 50%. However, if one of these is true, it replaces the hypsometry files with the HF2012 file. If "advance" setting is true, and the number of bands (nb) is greater than three, then additional bands are created, making sure that the number of bands added fit between hmin and adv min. adv min is by default 10m. 
 
