--- a/docs/source/06.-Mass-balance-model.md
+++ b/docs/source/06.-Mass-balance-model.md
@@ -1,17 +1,21 @@
-## Accumulation
+```{note}
+This part of the documentation is still under development.
+```
 
-## Melt
+# Accumulation
 
-## Debris
+# Melt
 
-## Refreezing
+# Debris
 
-## Firnicetemperature
+# Refreezing
 
-## Adapting snow reservoir
+# Firnicetemperature
 
-## Catchment discharge
+# Adapting snow reservoir
 
-## Adapting surface types
+# Catchment discharge
 
-## Storing day variables
+# Adapting surface types
+
+# Storing day variables
