Summarize markdown files under 3 toctrees

--- a/docs/source/00.-Introduction.md
+++ b/docs/source/00.-Introduction.md
@@ -1,4 +1,6 @@
-# Schematic overview
+# Introduction
+
+## Schematic overview
 Below is a schematic overview of the model, including all inputs, outputs, and modules.
 
 ![Schematic Overview](/images/GloGEM_schematic.png)
