Adjust names & headers

--- a/docs/source/06.-Mass-balance-model.md
+++ b/docs/source/06.-Mass-balance-model.md
@@ -1,21 +1,22 @@
 ```{note}
 This part of the documentation is still under development.
 ```
+# Mass balance
 
-# Accumulation
+## Accumulation
 
-# Melt
+## Melt
 
-# Debris
+## Debris
 
-# Refreezing
+## Refreezing
 
-# Firnicetemperature
+## Firnicetemperature
 
-# Adapting snow reservoir
+## Adapting snow reservoir
 
-# Catchment discharge
+## Catchment discharge
 
-# Adapting surface types
+## Adapting surface types
 
-# Storing day variables
+## Storing day variables
